# solver-market

./: .gitmodules  CMakeLists.txt  README.md
.github/: dependabot.yml
.github/workflows/: build-AMGX-input-deck-ada.yml  build-amgx-input-deck-ada.yml  build-install-AMGX-ada.yml  build-install-amgx-ada.yml  build-install-amgx.yml  build-install-trilinos-ada.yml  build-install-trilinos-amgx.yml  build-install-trilinos-kokkos-only-ada.yml  build-install-trilinos-kokkos-only.yml  build-muelu-input-deck-ada.yml  build-test-AMGX-input-deck-ada.yml  build-test-muelu-input-deck-ada.yml  test-muelu-input-deck-ada.yml  test-muelu-input-deck.yml  unit-test-solver-market-csr-matrix.yml  unit-test-solver-market-reader.yml  unit-tests.yml
input-decks/: muelu-input-deck.cpp
matrices/: rhs_51840.mtx  rhs_51840_coordinate.mtx
src/: SolverMarketOutput.h  solver-market-csr-matrix.hpp  solver-market-csr-matrix.tpp  unit-test-solver-market-csr-matrix.cpp
src/AMGX/: AMGX-input-deck.cpp
src/amgx/: amgx-input-deck.cpp
src/muelu/: muelu-input-deck.cpp
src/muelu/params-files/: my-chebyshev.xml
src/muelu/utils/: ascii2binary
src/solver-market/: array2coordinate.py  solver-market-csr-matrix.hpp  solver-market-csr-matrix.tpp  solver-market-header.hpp  solver-market-output.h  solver-market-vector.hpp  solver-market-vector.tpp
tests/: unit-test-solver-market-csr-matrix.cpp  unit-test-solver-market-reader.cpp
